--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <title>カスタム認証チュートリアル</title>
+    <title>予約サイトチュートリアル</title>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
                     </li>
                 {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'account_signup' %}">サインアップ</a>
+                        <a class="nav-link" href="{% url 'account_signup' %}">スタッフ</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'account_login' %}">ログイン</a>
