--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -70,6 +70,13 @@ main {
     grid-template-columns: repeat(2, 1fr);
 }
 
+/* mypage */
+
+.mypage img {
+    height:150px;
+    object-fit: contain;
+}
+
 /* profile */
 .card-profile {
     width: 700px;
